feat: production-ready FheNativeBridge backed by Microsoft SEAL 4.1
Replace dummy C stub with real SEAL C++ implementation:

- Native: blindbean_fhe.cpp links against SEAL via CMake + vcpkg
- Java: FheNativeBridge with 15 cached MethodHandles, proper DLL discovery
- Java: FheContext (AutoCloseable), FheCiphertextNative (serialization)
- Integration: BlindMath dispatches BFV/CKKS through native bridge
- Integration: BlindContext manages ThreadLocal FHE contexts
- CI: CMake + vcpkg pipeline replaces bare gcc
- Tests: comprehensive BFV/CKKS/serialization/error test suites
- Docs: CLAUDE.md, ARCHITECTURE.md, README.md updated